# haskell-book-solutions

./: README.md  haskellbook.cabal
src/: Main.hs
src/Ch16/: Exercises.hs  FunctorLaws.hs  Instances.hs  Possibly.hs  Sum.hs
src/Ch17/: BadMonoid.hs  Constant.hs  Cow.hs  Exercises.hs  Identity.hs  List.hs  Lookups.hs  MakePerson.hs  Validation.hs  ZipList.hs
src/Ch18/: BadMonad.hs  Cow.hs  Either.hs  EitherExample.hs  Exercises.hs  Exercises2.hs  FmapBind.hs  SayHi.hs
src/Ch20/: Exercises.hs  Library.hs
src/Ch21/: Either.hs  Exercises.hs  HttpStuff.hs  Tuple.hs
src/Ch22/: Ask.hs  NewBeginning.hs  Person.hs  PrettyReader.hs  ReaderPractice.hs  Shawty.hs  ShortExercise.hs
src/Ch23/: Exercises.hs  FizzBuzz.hs  RandomExample.hs  RandomExample2.hs  State.hs
src/Ch24/: AltParsing.hs  Digit.hs  Fractions.hs  IPV4.hs  IPV6.hs  Ini.hs  LearnParsers.hs  LogFile.hs  Marshalling.hs  Phone.hs  Semver.hs
src/Ch25/: Compose.hs  Exercises.hs  Identity.hs
src/Ch26/: EitherT.hs  Exercises.hs  HitCounter.hs  LoginExercise.hs  MaybeT.hs  OuterInner.hs  ReaderT.hs  Scotty.hs  StateT.hs
src/Ch27/: Bench.hs  ByteString.hs  Char8ProllyNotWhatYouWant.hs  CoreDump.hs  DList.hs  Exercises.hs  Kaboom.hs  ListVsMap.hs  ListVsSequence.hs  ListVsVector.hs  Loci  Loci.hs  MVar.hs  ManualBang.hs  MapVsSet.hs  MutableVector.hs  Profiling  Profiling.hs  StrictList.hs  Trace.hs  VectorFusion.hs  VectorUpdate.hs
