name:                haskellbook
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskellbook#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskellbook
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , checkers
                     , bytestring
                     , wreq
                     , random
                     , trifecta
                     , parsers
                     , raw-strings-qq
                     , containers
                     , text
                     , aeson
                     , scientific
                     , transformers
                     , time
                     , safe
                     , hedis
                     , attoparsec
                     , network-uri
                     , mtl
                     , scotty
                     , semigroups
                     , criterion
                     , vector
                     , directory
                     , dlist
